add scart version

--- a/config.json
+++ b/config.json
@@ -7,5 +7,6 @@
     "image": "images/logo.png",
     "link": "https://seven.io",
     "name": "seven",
-    "version": "1.0"
+    "scartVersion": "7.1|7.2",
+    "version": "1.1"
 }
