--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "configKey": "Seven",
     "email": "support@seven.io",
     "image": "images/logo.png",
-    "link": "https://seven.io",
+    "link": "https://www.seven.io",
     "name": "seven",
     "scartVersion": "7.1|7.2",
     "version": "1.1"
